--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 
 env:
   variables:
-    ECR_REPOSITORY: <your-ecr-repository>
+    ECR_REPOSITORY: 722015880532.dkr.ecr.us-east-1.amazonaws.com/cdk-hnb659fds-container-assets-722015880532-us-east-1
 
 phases:
   pre_build:
